styles.css
@font-face {
  font-family: "Luckiest Guy";
  src: url(Assets/Font/LuckiestGuy.ttf);
}

@font-face {
  font-family: "Urbanist";
  src: url(Assets/Font/Urbanist-Bold.ttf);
}

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0px;
  margin: 0px;
  width: 100%;
  height: 100%;
  overflow: hidden;

  --ui-color-background: whitesmoke;
  --ui-color-foreground: gray;
}

dialog {
  text-align: center;
}

canvas.fullscreen {
  width: 100vw;
  height: 100vh;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  /* color: white; */
  background-color: white;
}

.hidden {
  display: none !important;
}

.center-center {
  display: grid;
  place-items: center;
}

button {
  background-color: var(--ui-color-foreground);
  border: 1px solid var(--ui-color-foreground);
  color: var(--ui-color-background);
  border-radius: 0.25rem;
  font-size: inherit;
  cursor: pointer;
}

button.inverted {
  background-color: var(--ui-color-background);
  color: var(--ui-color-foreground);
}

button:disabled {
  background-color: var(--ui-color-background);
  color: var(--ui-color-foreground);
  cursor: default;
}

/* main menu */

#main-menu-overlay {
  z-index: 10000;
  background-color: var(--ui-color-background);

  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1em;
  padding: 1em;
}

#main-menu-overlay button {
  padding: 0.5em;
  font-size: 2em;
}

/* Game Overlay */
#game-overlay {
  pointer-events: none;
  background-color: transparent;
  color: white;
}

#healthbar {
  position: absolute;
  /* top: calc(50% - 6vh); */
  bottom: 1px;
  left: calc(50% - 5vw);
  width: 10vw;
  appearance: none;
  -webkit-appearance: none;
}

progress[value]::-webkit-progress-value,
progress[value]::-moz-progress-bar {
  background-color: green;
}

#game-overlay-pause {
  pointer-events: all;
  position: absolute;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: row;
  padding: 1rem;
  gap: 1em;
  cursor: pointer;
}

#game-overlay-pause span{
  display: block;
  background-color: white;
  height: 3em;
  width: 1em;
}

/* collection & deck */
#collection-overlay {
  --gap: 2vw;
  --padding: 3vw;
  background-color: var(--ui-color-background);
  z-index: 1001;
  display: flex;
  flex-direction: column;
  color: black;
  --card-size: calc(((100vw - 4 * var(--gap) - 2 * var(--padding))/ 5) * 21 / 15);
}

#collection-overlay * {
  /* border: 1px solid red; */
}

#collection-outer-wrapper {
  width: 100%;
  height: 66vh;
  overflow-y: auto;
  transition: height 0.2s;
}

#deck-outer-wrapper {
  height: 33vh;
  display: flex;
  flex-direction: column;
  transition: height 0.2s;
}

#largeDeck:checked~#collection-outer-wrapper {
  height: 33vh;
}

#largeDeck:checked~#deck-outer-wrapper {
  height: 66vh;
}

#deck-wrapper {
  overflow-y: auto;
  flex-grow: 1;
}

.contains-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--gap);
  padding: var(--padding);
  justify-content: left;
}

#deck-selection {
  display: flex;
  justify-content: space-evenly;
  border-top: 2px solid var(--ui-color-foreground);
  padding: 0.2em;
  font-size: 6vw;
  align-items: baseline;
}

#deck-selection button {
  /* padding: 0 1em; */
  width: 1.5em;
  height: 1.5em;
}

#deck-selection button.active {
  background-color: var(--ui-color-foreground);
  color: var(--ui-color-background);
}

#deck-back-button {
  padding: 0.25em;
}

#selection {
  border-bottom: 1px dashed var(--ui-color-foreground);
  padding-top: 3px;
  justify-content: space-evenly;
}

#selection .card {
  outline: 2px solid var(--ui-color-foreground);
}

#deck {
  justify-content: space-evenly;
}

/* popup */

#card-popup {
  background-color: rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 10;
}

#card-popup-card {
  --card-size: min(75vh, calc(100vw * 21 / 15));
  height: var(--card-size);

}

#card-popup-card .card:not(.common) .card-image {
  animation: wiggle 4s ease-in-out infinite;
}

#card-popup-card .card.legendary .card-rays {
  /* animation: rotate 10s linear infinite; */
}

#card-popup-selection-wrapper {
  display: flex;

}



/* cards */
.card {
  box-sizing: border-box;
  user-select: none;
  cursor: pointer;
  position: relative;
  height: var(--card-size);
  aspect-ratio: 15 / 21;
  display: grid;
  grid-template-rows: 20% 65% 15%;
  font-family: 'Luckiest Guy', cursive;

  --delay: 0s;

  --name-text-color: white;

  --name-text-outline: #616161;
  --name-text-dropshadow: #545454;

  --text-text-color: #efefef;
  --text-text-dropshadow: rgba(0, 0, 0, 0.25);

  background-image: url("Assets/Cards/PlainCards/Common_Card.png");
  background-size: 100% 100%;

  --background-image-glow: url("Assets/Cards/PlainCards/Common_Glow.png");
  --background-image-rays: url("Assets/Cards/PlainCards/Common_Rays.png");
}

.card:not(.placeholder)::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-image: var(--background-image-glow);
  background-size: 100% 100%;
  z-index: 4;
  animation: fade 1.5s infinite alternate-reverse ease-in-out;
  animation-delay: var(--delay);
}

.card.locked::before {
  animation: none;
}

.card-rays-outer {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 363 488"><path class="cls-1" d="M7.53,40.64c-2.28,30.63-1.21,82.49,2.15,102.86.51,3.12,1.04,35.45,2.1,100.09.88,54.01.37,68.18.47,86.86.12,22.34.23,44.79-2.92,66.9l338.58-9.91c1.74-23.61,4.48-54.23,3.98-82.57-.42-23.81-2.67-23.57-3.12-53.7-.27-18.38,1.04-36.73,1.88-55.09,2.74-60.42.2-120.94-2.35-181.37-.12-2.97-.39-6.26-2.54-8.31-2.82-2.69-7.24-2.25-8.35-2.17-12.48.94-111.78,4.89-179.12,1.3h0c-6.5-1.2-30.28.51-68.34,1-42.84.56-45.82.45-60.3-1-3.29-.33-15.42-1.86-20.28,4.61-9.31,8.84-1.27,23.09-1.83,30.51Z"/></svg>') bottom no-repeat;
  z-index: 3;
}

.card-rays {
  width: 100%;
  height: 100%;
  background-image: var(--background-image-rays);
  background-size: 100% 100%;
  /* -webkit-clip-path: url(#cardClip);
  clip-path: url(#cardClip); */
  transform-origin: 55.7% 45.2%;
}

.card:not(.locked) .card-rays {
  animation: wiggle-large 4s ease-in-out infinite;
  animation-delay: var(--delay);
}

.card.uncommon {
  background-image: url("Assets/Cards/PlainCards/Uncommon_Card.png");
  --text-text-color: #d5fee6;
  --name-text-outline: #0a6200;
  --name-text-dropshadow: #005117;
  --background-image-glow: url("Assets/Cards/PlainCards/Uncommon_Glow.png");
  --background-image-rays: url("Assets/Cards/PlainCards/Uncommon_Rays.png");
}

.card.rare {
  background-image: url("Assets/Cards/PlainCards/Rare_Card.png");
  --text-text-color: #d5f6fe;
  --name-text-outline: #002662;
  --name-text-dropshadow: #000f51;
  --background-image-glow: url("Assets/Cards/PlainCards/Rare_Glow.png");
  --background-image-rays: url("Assets/Cards/PlainCards/Rare_Rays.png");
}

.card.epic {
  background-image: url("Assets/Cards/PlainCards/Epic_Card.png");
  --text-text-color: #f1d5fe;
  --name-text-outline: #3e0062;
  --name-text-dropshadow: #480051;
  --background-image-glow: url("Assets/Cards/PlainCards/Epic_Glow.png");
  --background-image-rays: url("Assets/Cards/PlainCards/Epic_Rays.png");
}

.card.legendary {
  background-image: url("Assets/Cards/PlainCards/Legendary_Card.png");
  --name-text-outline: #623600;
  --name-text-dropshadow: #512400;
  --text-text-color: #ffdfa2;
  --background-image-glow: url("Assets/Cards/PlainCards/Legendary_Glow.png");
  --background-image-rays: url("Assets/Cards/PlainCards/Legendary_Rays.png");
}

.card.placeholder {
  background-image: none;
  border: 1px solid var(--ui-color-foreground);
  cursor: default;

}

.card-name {
  font-size: calc(var(--card-size) / 100 * 10);
  position: relative;
  --shadow-width: 0.05em;
  text-shadow: 0.05em 0.05em var(--name-text-outline),
    -0.05em 0.05em var(--name-text-outline),
    0.05em -0.05em var(--name-text-outline),
    -0.05em -0.05em var(--name-text-outline);
  filter: drop-shadow(0 0.12em 0 var(--name-text-dropshadow));
  color: var(--name-text-color);
  transform: translate(0, calc(var(--card-size) * 0.1));
  margin-top: -0.5em;
  z-index: 6;
}

.card-text {
  white-space: pre-wrap;
  display: grid;
  place-items: center;
  font-size: calc(var(--card-size) / 100 * 4);
  text-align: center;
  font-family: "Urbanist", Arial, Helvetica, sans-serif;
  color: var(--text-text-color);
  text-shadow: 0 0.1em 0 var(--text-text-dropshadow);
  transform: rotate(-3deg) translate(2em, -0.5em);
  width: 80%;
  height: 100%;
  z-index: 6;
}

.card-image {
  display: grid;
  place-items: center;
  z-index: 5;
}

.card-image>img {
  max-height: 100%;
  max-width: 100%;
}

.card.selected {
  opacity: 0.5;
}

.card.locked {
  cursor: default;
  filter: saturate(0);
}

.card.locked .card-name,
.card.locked .card-text {
  opacity: 0;
}

.card.locked .card-image {
  filter: brightness(0);
}

#hideLocked:checked~#collection-outer-wrapper .card.locked {
  display: none;
}

#collection-outer-wrapper label[for="hideLocked"]::before {
  content: "Hide";
}

#hideLocked:checked~#collection-outer-wrapper label[for="hideLocked"]::before {
  content: "Show";
}

/* touch stuff */
#swipe-game-overlay {
  display: none;
  pointer-events: all;
  z-index: 1000;
  background-color: transparent;
}

.touch-circle {
  position: absolute;
  aspect-ratio: 1;
  border-radius: 50%;
  border: 1px solid black;
  background-color: rgba(255, 255, 255, 0.25);
  touch-action: none;
  pointer-events: none;
}

#touch-circle {
  width: 15vw;
}

#touch-circle-inner {
  width: 10vw;
  left: 2.5vw;
  top: 2.5vw;
}

#touch-circle.locked {
  bottom: 10vh;
  left: calc(50vw - 7.5vw);
  touch-action: all;
  pointer-events: all;
}

@keyframes wiggle {
  0% {
    transform: rotate(-0deg);
  }

  50% {
    transform: rotate(-3deg);
  }

  100% {
    transform: rotate(-0deg);
  }
}

@keyframes wiggle-large {
  0% {
    transform: rotate(2deg);
  }

  50% {
    transform: rotate(-2deg);
  }

  100% {
    transform: rotate(2deg);
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

@keyframes fade {
  from {
    opacity: 1;
  }

  to {
    opacity: 0.6;
  }
}

/* pointer: coarse aka we're on a mobile device with touch input */
@media (pointer: coarse) {
  #swipe-game-overlay {
    display: block;
  }
}

#mobile-debug {
  position: absolute;
  bottom: 2rem;
  width: 100%;
}

#mobile-debug>button {
  height: 4.5rem;
  width: 23%;
}

@media screen and (min-width: 500px) {

  #deck-outer-wrapper,
  #collection-outer-wrapper {
    height: 100% !important;
  }

  #deck-outer-wrapper {
    max-width: calc((var(--card-size) * 15 / 21) * 5 + (var(--gap) * 5) + (var(--padding) * 3));
    border-left: 2px solid var(--ui-color-foreground);
  }

  #collection-outer-wrapper {
    --card-size: 12vw;
  }

  #collection-overlay {
    flex-direction: row;
    --card-size: 8vw;
    --gap: 0.5vw;
    --padding: 1vw;
  }

  #deck-selection {
    font-size: 3vw;
    border-top: none;
  }
}

